--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
       <i class="fa-solid fa-xmark"></i>
       <h1>Gửi Dõm!</h1>
       <p>
-        "💞Nếu có một điều ước thì anh ước là mình đang ở cạnh em và nói với em những điều này,
-        anh ước rằng mình yêu nhau sớm hơn hehe từ ngày gặp em trái tìm anh chẳng còn khô
-        khan như trước
-        và cũng cười nhiều hơn, phía trước chúng ta là một chặng đường đầy dẫy những khó khăn nhưng anh tin
-        chúng ta có thể cùng nhau vượt qua được. 💗 Trách nhiệm của anh là chăm
-        sóc và thay em gánh chịu khó khăn, vì xung quanh em chính là anh. mãi yêu em.💞
+        "💞Chúp bởi??💞
       <nav></nav>."
       </p>
     </div>
