--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div class="content">
       <i class="fa-solid fa-xmark"></i>
       <h1>Gửi Dõm!</h1>
-      <p>
-        "💞Chúp bởi??💞
-      <nav></nav>."
-      </p>
+     <p style="text-align: center; display: block;">
+    "💞Chúp bởi??💞
+    <nav></nav>.
+</p>
     </div>
   </div>
 </body>
